rename pot->po (not a template) and continue translating

--- a/src/po/de_DE/digitail.po
+++ b/src/po/de_DE/digitail.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://github.com/MasterTailer/CRUMPET/issues\n"
 "POT-Creation-Date: 2022-04-23 16:50+0100\n"
-"PO-Revision-Date: 2023-03-07 15:42+0100\n"
+"PO-Revision-Date: 2023-03-07 16:15+0100\n"
 "Last-Translator: Viktoria Rei Bauer <vbauer@stargazer.at>\n"
 "Language-Team: German\n"
 "Language: de_DE\n"
@@ -46,9 +46,9 @@ msgid ""
 msgstr ""
 "Es sieht so aus, als ob es sich bei diesem Gerät um keinen EarGear Controller"
 " handelt (Keine entsprechenden "
-"Schreib-Funktionen gefunden). Wenn du dir sicher bist, dass es sich um"
-" EarGear handelt, "
-"melde diesen Fehler bitte an die Tail Company."
+"Schreib-Funktionen gefunden). Wenn du dir sicher bist, dass es sich trotzdem"
+" um "
+"EarGear handelt, melde diesen Fehler bitte an die Tail Company."
 
 #: BTDeviceEars.cpp:126
 msgctxt ""
@@ -59,11 +59,11 @@ msgid ""
 "main ears reading characteristic). If you are certain that it definitely is, "
 "please report this error to The Tail Company."
 msgstr ""
-"Es sieht so aus, als ob es sich bei diesem Gerät um keinen EarGear Controller"
-" handelt (Keine entsprechenden "
-"Lese-Funktionen gefunden). Wenn du dir sicher bist, dass es sich um EarGear"
-" handelt, "
-"melde diesen Fehler bitte an die Tail Company."
+"Es sieht so aus, als ob es sich bei diesem Gerät um keinen EarGear Controller "
+" handelt (Keine entsprechenden Lese-Funktionen gefunden). Wenn du dir sicher"
+" bist, "
+"dass es sich trotzdem um EarGear handelt, melde diesen Fehler bitte an die"
+" Tail Company."
 
 #: BTDeviceEars.cpp:191 BTDeviceMitail.cpp:174
 msgctxt ""
@@ -130,11 +130,17 @@ msgid ""
 "connection issue. If you run into this problem repeatedly, please get in "
 "touch."
 msgstr ""
+"Die Datei, die die Informationen über die neue Firmware-Version "
+"liefert, enthielt nicht die entsprechenden Informationen. Wahrscheinlich"
+" hatten "
+"wir nur ein Verbindungsproblem. Versuche es bitte später nochmals und wenn"
+" der Fehler "
+"immer noch auftritt, melde dich bitte bei uns."
 
 #: BTDeviceEars.cpp:421 BTDeviceMitail.cpp:342
 msgctxt "Message for when we are checking the downloaded firmware data"
 msgid "Checking integrity of the downloaded firmware data..."
-msgstr ""
+msgstr "Überprüfe die Firmware-Daten..."
 
 #: BTDeviceEars.cpp:491
 msgctxt "Warning message when a fault occurred during a connection attempt"
@@ -142,6 +148,8 @@ msgid ""
 "An error occurred while connecting to your EarGear (the main service object "
 "could not be created). If you feel this is in error, please try again!"
 msgstr ""
+"Beim Verbinden zu deinem EarGear ist etwas schief gegangen "
+"(Fehler: Main Service). Bitte versuche es noch einmal!"
 
 #: BTDeviceEars.cpp:505
 msgctxt ""
@@ -150,6 +158,8 @@ msgid ""
 "An error occurred while connecting to your EarGear (the battery service was "
 "not available). If you feel this is in error, please try again!"
 msgstr ""
+"Beim Verbinden zu deinem EarGear ist etwas schief gegangen "
+"(Fehler: Batterie). Bitte versuche es noch einmal!"
 
 #: BTDeviceEars.cpp:536
 msgctxt ""
@@ -159,6 +169,11 @@ msgid ""
 "battery level characteristic). If you are certain that it definitely is, "
 "please report this error to The Tail Company."
 msgstr ""
+"Es sieht so aus, als ob es sich bei diesem Gerät um keinen EarGear Controller "
+" handelt (Keine entsprechenden Batterie-Funktionen gefunden). Wenn du dir"
+" sicher bist, "
+"dass es sich trotzdem um EarGear handelt, melde diesen Fehler bitte an die"
+" Tail Company."
 
 #: BTDeviceEars.cpp:566
 msgctxt "Warning that some unknown error happened"
@@ -341,6 +356,11 @@ msgid ""
 "writing characteristic). If you are certain that it definitely is, please "
 "report this error to The Tail Company."
 msgstr ""
+"Es sieht so aus, als ob es sich bei diesem Gerät um keinen MiTail Controller "
+"handelt (Keine entsprechenden Schreib-Funktionen gefunden). Wenn du dir"
+" sicher bist, dass es "
+"sich trotzdem um einen MiTail handelt, melde diesen Fehler bitte an die Tail"
+" Company."
 
 #: BTDeviceMitail.cpp:123
 msgctxt ""
@@ -351,6 +371,11 @@ msgid ""
 "reading characteristic). If you are certain that it definitely is, please "
 "report this error to The Tail Company."
 msgstr ""
+"Es sieht so aus, als ob es sich bei diesem Gerät um keinen MiTail handelt "
+"(Keine entsprechenden Lese-Funktionen gefunden). Wenn du dir sicher bist,"
+" dass es sich "
+"trotzdem um einen MiTail handelt, melde diesen Fehler bitte an die Tail"
+" Company."
 
 #: BTDeviceMitail.cpp:413
 msgctxt "Warning message when a fault occurred during a connection attempt"
@@ -387,6 +412,10 @@ msgid ""
 "characteristic). If you are certain that it definitely is, please report "
 "this error to The Tail Company."
 msgstr ""
+"Es sieht so aus, als ob es sich bei diesem Gerät um keinen MiTail handelt "
+"(Keine entsprechende Batterie gefunden). Wenn du dir sicher bist, dass es"
+" sich trotzdem "
+"um einen MiTail handelt, melde diesen Fehler bitte an die Tail Company."
 
 #: BTDeviceMitail.cpp:533
 msgctxt "Warning that some unknown error happened"
@@ -451,6 +480,10 @@ msgid ""
 "characteristic). If you are certain that it definitely is, please report "
 "this error to The Tail Company."
 msgstr ""
+"Es sieht so aus, als ob es sich bei diesem Gerät um keinen DIGITAiL"
+" handelt (Keine entsprechenden Funktionen gefunden). "
+"Wenn du dir sicher bist, dass es sich trotzdem um einen DIGITAiL handelt, "
+"melde diesen Fehler bitte an die Tail Company."
 
 #: BTDeviceTail.cpp:258
 msgctxt "Warning message when the main service was not found on the device"
@@ -866,7 +899,7 @@ msgstr ""
 #: qml/DatePicker.qml:246
 msgctxt "Button for cancelling the selection of a date, in a date picker"
 msgid "Cancel"
-msgstr ""
+msgstr "Abbrechen"
 
 #: qml/DatePicker.qml:253
 msgctxt "Button for confirming the selection of a date, in a date picker"
@@ -1280,7 +1313,7 @@ msgstr ""
 #: qml/MessageBox.qml:67
 msgctxt "Cancel button for a generic message"
 msgid "Cancel"
-msgstr ""
+msgstr "Abbrechen"
 
 #: qml/MoveListEditor.qml:32
 msgctxt ""
@@ -1974,7 +2007,7 @@ msgstr ""
 #: qml/TimePicker.qml:121
 msgctxt "Button for cancelling the time entry, on a time picker"
 msgid "Cancel"
-msgstr ""
+msgstr "Abbrechen"
 
 #: qml/TimePicker.qml:129
 msgctxt "Button for confirming the time entry, on a time picker"
