--- a/src/po/de_DE/digitail.po
+++ b/src/po/de_DE/digitail.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://github.com/MasterTailer/CRUMPET/issues\n"
 "POT-Creation-Date: 2022-04-23 16:50+0100\n"
-"PO-Revision-Date: 2023-03-07 16:39+0100\n"
+"PO-Revision-Date: 2023-03-07 17:01+0100\n"
 "Last-Translator: Viktoria Rei Bauer <vbauer@stargazer.at>\n"
 "Language-Team: German\n"
 "Language: de_DE\n"
@@ -228,14 +228,14 @@ msgstr ""
 msgctxt ""
 "Message shown alongside a progress bar when downloading update information"
 msgid "Downloading firmware update information"
-msgstr ""
+msgstr "Lade die Informationen zur Aktualisierung herunter"
 
 #: BTDeviceEars.cpp:780 BTDeviceMitail.cpp:702
 msgctxt ""
 "Message shown along a progress bar when downloading the firmware payload "
 "itself"
 msgid "Downloading firmware update from The Tail Company's website..."
-msgstr ""
+msgstr "Lade die Aktualisierung von der Tail Company Webseite herunter."
 
 #: BTDeviceEars.cpp:797 BTDeviceMitail.cpp:719
 msgctxt ""
@@ -260,7 +260,7 @@ msgstr ""
 msgctxt ""
 "Name of the calm and relaxed group as used for no phone group selection"
 msgid "Calm and Relaxed"
-msgstr ""
+msgstr "Ruhig und Entspannt"
 
 #: BTDeviceFake.cpp:49 BTDeviceMitail.cpp:366
 msgctxt ""
@@ -581,7 +581,7 @@ msgstr "Fehler beim Schreiben der Datei %1"
 #: GestureDetectorModel.cpp:221
 msgctxt "The name of a sensor"
 msgid "Double Tap"
-msgstr ""
+msgstr "Doppelttippen"
 
 #: GestureDetectorModel.cpp:222
 msgctxt "The name of a sensor"
@@ -601,7 +601,7 @@ msgstr ""
 #: GestureDetectorModel.cpp:225
 msgctxt "The name of a sensor"
 msgid "Cover Gesture"
-msgstr ""
+msgstr "Cover-Geste"
 
 #: GestureDetectorModel.cpp:226
 msgctxt "The name of a sensor"
@@ -758,7 +758,7 @@ msgstr ""
 #: qml/AlarmList.qml:111
 msgctxt "Text for an action which allows the user to delete an alarm"
 msgid "Delete this Alarm"
-msgstr ""
+msgstr "Lösche diesen Alarm"
 
 #: qml/AlarmList.qml:115
 msgctxt ""
@@ -903,7 +903,7 @@ msgctxt ""
 "Button for the action of disconnecting a device, in the prompt for "
 "connecting a device"
 msgid "Disconnect"
-msgstr ""
+msgstr "Verbindung trennen"
 
 #: qml/ConnectToTail.qml:70
 msgctxt ""
@@ -915,7 +915,7 @@ msgstr "Verbinden"
 #: qml/DatePicker.qml:239
 msgctxt "Button for selecting the date of today, in a date picker"
 msgid "Today"
-msgstr ""
+msgstr "Heute"
 
 #: qml/DatePicker.qml:246
 msgctxt "Button for cancelling the selection of a date, in a date picker"
@@ -925,12 +925,12 @@ msgstr "Abbrechen"
 #: qml/DatePicker.qml:253
 msgctxt "Button for confirming the selection of a date, in a date picker"
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: qml/DeveloperModePage.qml:27
 msgctxt "Header for the Developer Mode page"
 msgid "Developer Mode"
-msgstr ""
+msgstr "Entwickler-Modus"
 
 #: qml/DeveloperModePage.qml:34
 msgctxt "Button with a sound effect for the Developer Mode Page"
@@ -942,7 +942,7 @@ msgctxt ""
 "Heading for the overlay for picking options when disconnecting from a piece "
 "of gear"
 msgid "Disconnect?"
-msgstr ""
+msgstr "Verbindung trennen?"
 
 #: qml/DisconnectOptions.qml:53
 msgctxt ""
@@ -989,7 +989,7 @@ msgctxt ""
 "Label for the button in the disconnection options popup which puts the gear "
 "into autonomous, or no phone, mode"
 msgid "Engage No Phone Mode"
-msgstr ""
+msgstr "No-Phone Modus einschalten"
 
 #: qml/DisconnectOptions.qml:170
 msgctxt ""
@@ -1011,14 +1011,14 @@ msgctxt ""
 "Label for the button in the disconnection options popup which only "
 "disconnects the gear"
 msgid "Disconnect"
-msgstr ""
+msgstr "Verbindung trennen"
 
 #: qml/DisconnectOptions.qml:212
 msgctxt ""
 "Header label for the section which lets you tell the gear to shut down "
 "before disconnecting"
 msgid "Disconnect and Shut Down"
-msgstr ""
+msgstr "Verbindung trennen und Gerät(e) ausschalten"
 
 #: qml/DisconnectOptions.qml:230
 msgctxt ""
@@ -1038,7 +1038,7 @@ msgstr ""
 #: qml/EarPoses.qml:26
 msgctxt "Title for the page for selecting a pose for the EarGear"
 msgid "Ear Poses"
-msgstr ""
+msgstr "Position der Ohren"
 
 #: qml/EarPoses.qml:29
 msgctxt ""
@@ -1129,14 +1129,14 @@ msgstr "(keine Aktion)"
 #: qml/IdleModePage.qml:26
 msgctxt "Title for the page for selecting a move in Casual Mode"
 msgid "Casual Mode Categories"
-msgstr ""
+msgstr "Gelegenheitsmodus"
 
 #: qml/IdleModePage.qml:46
 msgctxt ""
 "Description for the category for the Relaxed Moveset, on the page for "
 "selecting a move in Casual Mode"
 msgid "Calm and Relaxed"
-msgstr ""
+msgstr "Ruhig und Entspannt"
 
 #: qml/IdleModePage.qml:51
 msgctxt ""
@@ -1177,7 +1177,7 @@ msgstr ""
 #: qml/main.qml:62
 msgctxt "Title of the application"
 msgid "Crumpet"
-msgstr ""
+msgstr "Crumpet"
 
 #: qml/main.qml:98
 msgctxt "Text for the notification upon connecting successfully to a device"
@@ -1187,17 +1187,17 @@ msgstr "Verbindung erfolgreich!"
 #: qml/main.qml:119
 msgctxt "Title for the warning for having Bluetooth disabled"
 msgid "Warning"
-msgstr ""
+msgstr "Achtung"
 
 #: qml/main.qml:119
 msgctxt "Message for the warning for having Bluetooth disabled"
 msgid "Bluetooth is disabled"
-msgstr ""
+msgstr "Bluetooth ist ausgeschaltet"
 
 #: qml/main.qml:121
 msgctxt "Title for the warning for not having detected any Bluetooth devices"
 msgid "Warning"
-msgstr ""
+msgstr "Achtung"
 
 #: qml/main.qml:121
 msgctxt "Message for the warning for not having detected any Bluetooth devices"
@@ -1207,27 +1207,27 @@ msgstr ""
 #: qml/main.qml:134
 msgctxt "Title for the popup for having enabled Developer Mode"
 msgid "Developer mode"
-msgstr ""
+msgstr "Entwickler-Modus"
 
 #: qml/main.qml:134
 msgctxt "Message for the popup for having enabled Developer Mode"
 msgid "Developer mode is enabled"
-msgstr ""
+msgstr "Entwickler-Modus ist eingeschaltet"
 
 #: qml/main.qml:136
 msgctxt "Title for the popup for having disabled Developer Mode"
 msgid "Developer mode"
-msgstr ""
+msgstr "Entwickler-Modus"
 
 #: qml/main.qml:136
 msgctxt "Message for the popup for having disabled Developer Mode"
 msgid "Developer mode is disabled"
-msgstr ""
+msgstr "Entwickler-Modus ist ausgeschaltet"
 
 #: qml/main.qml:141
 msgctxt "Title for the popup for getting a timeout for Casual Mode"
 msgid "Casual Mode is Off"
-msgstr ""
+msgstr "Gelegenheitsmodus ist ausgeschaltet"
 
 #: qml/main.qml:141
 msgctxt "Message for the popup for getting a timeout for Casual Mode"
@@ -1237,7 +1237,7 @@ msgstr ""
 #: qml/main.qml:202
 msgctxt "Button for opening the Crumpet page, from the landing page"
 msgid "Crumpet"
-msgstr ""
+msgstr "Crumpet"
 
 #: qml/main.qml:210
 msgctxt "Button for opening the Alarm page, from the landing page"
@@ -1257,7 +1257,7 @@ msgstr ""
 #: qml/main.qml:239
 msgctxt "Button for opening the EarGear Poses page, from the landing page"
 msgid "Ear Poses"
-msgstr ""
+msgstr "Position der Ohren"
 
 #: qml/main.qml:248
 msgctxt "Button for opening the Glow Tips page, from the landing page"
@@ -1269,7 +1269,7 @@ msgctxt ""
 "Button for opening the page for setting up the Casual Mode, from the landing "
 "page"
 msgid "Casual Mode Settings"
-msgstr ""
+msgstr "Einstellungen für den Gelegenheitsmodus"
 
 #: qml/main.qml:266
 msgctxt "Button for opening the Gear Gestures page, from the landing page"
@@ -1279,12 +1279,12 @@ msgstr ""
 #: qml/main.qml:275
 msgctxt "Button for opening the Developer Mode page, from the landing page"
 msgid "Developer Mode"
-msgstr ""
+msgstr "Entwickler-Modus"
 
 #: qml/main.qml:290
 msgctxt "Button for opening the Settings Page, from the landing page"
 msgid "Settings"
-msgstr ""
+msgstr "Einstellungen"
 
 #: qml/main.qml:301
 msgctxt "Button for opening the About Us page, from the landing page"
@@ -1319,7 +1319,7 @@ msgctxt ""
 "Button for confirming the save of your new name, for the prompt for entering "
 "a name for your Gear"
 msgid "Save"
-msgstr ""
+msgstr "Speichern"
 
 #: qml/main.qml:429
 msgctxt "Label for your gear that gets shown when attempting to connect to it"
@@ -1329,7 +1329,7 @@ msgstr "Versuche zu verbinden..."
 #: qml/MessageBox.qml:48
 msgctxt "Confirmation button for a generic message"
 msgid "Ok"
-msgstr ""
+msgstr "Ok"
 
 #: qml/MessageBox.qml:67
 msgctxt "Cancel button for a generic message"
@@ -1354,7 +1354,7 @@ msgctxt ""
 "Message for the confirmation prompt for running a Move List, on the Move "
 "List Editor page"
 msgid "Do you want to run this list?"
-msgstr ""
+msgstr "Möchtest du diesen Bewegungsablauf abspielen?"
 
 #: qml/MoveListEditor.qml:51
 msgctxt ""
@@ -1396,7 +1396,7 @@ msgctxt ""
 "Message for the prompt for confirming the action of running a list, on the "
 "page for viewing Move Lists"
 msgid "Do you want to run the list %1?"
-msgstr ""
+msgstr "Möchtest du den B"
 
 #: qml/MoveLists.qml:56
 msgctxt ""
@@ -1410,7 +1410,7 @@ msgctxt ""
 "Label for the button for deleting a move list, on the page for viewing Move "
 "Lists"
 msgid "Delete this Move List"
-msgstr ""
+msgstr "Lösche diesen Bewegungsablauf"
 
 #: qml/MoveLists.qml:68
 msgctxt ""
@@ -1434,6 +1434,11 @@ msgid ""
 "you have created, tap it and pick OK. To perform actions on the ones you've "
 "created, like editing or even removing them entirely, swipe left on the item."
 msgstr ""
+"Erstelle eine Liste von Bewegungen, Licht-Effekten und Pausen für deine"
+" Geräte. Um einen "
+"Bewegungsablauf auszulösen, tippe diesen an und wähle OK. Um die Liste zu"
+" bearbeiten oder zu löschen, "
+"wische auf dem entsprechenden Eintrag nach Links."
 
 #: qml/MoveLists.qml:93
 msgctxt ""
@@ -1454,7 +1459,7 @@ msgctxt ""
 "Confirmating button for the prompt for giving a name to a move list, on the "
 "page for viewing Move Lists"
 msgid "Create"
-msgstr ""
+msgstr "Erstellen"
 
 #: qml/MoveLists.qml:99
 msgctxt ""
@@ -1608,7 +1613,7 @@ msgctxt ""
 "Description for the category for the Relaxed Moveset, on the overlay for "
 "picking a command, for configuring a move list"
 msgid "Calm and Relaxed"
-msgstr ""
+msgstr "Ruhig und Entspannt"
 
 #: qml/PickACommandSheet.qml:54 qml/PickACommandSheet.qml:81
 msgctxt ""
@@ -1649,34 +1654,34 @@ msgstr ""
 msgctxt ""
 "Button for deleting a Command Set, on the page for configuring Command Sets"
 msgid "Delete"
-msgstr ""
+msgstr "Löschen"
 
 #: qml/SettingsCrumpetPicker.qml:82
 msgctxt ""
 "Button for duplicating a Command Set, on the page for configuring Command "
 "Sets"
 msgid "Duplicate"
-msgstr ""
+msgstr "Kopie erstellen"
 
 #: qml/SettingsCrumpetPicker.qml:91
 msgctxt ""
 "Button for editing a Command Set, on the page for configuring Command Sets"
 msgid "Edit Commands"
-msgstr ""
+msgstr "Befehle bearbeiten"
 
 #: qml/SettingsCrumpetPicker.qml:103
 msgctxt ""
 "Header for the overlay for editing a Command Set, on the page for "
 "configuring Command Sets"
 msgid "Edit Commands"
-msgstr ""
+msgstr "Befehle bearbeiten"
 
 #: qml/SettingsCrumpetPicker.qml:111
 msgctxt ""
 "Button for saving a Command Set, on the overlay for editing a Command Set, "
 "on the page for configuring Command Sets"
 msgid "Save"
-msgstr ""
+msgstr "Speichern"
 
 #: qml/SettingsCrumpetPicker.qml:125
 msgctxt ""
@@ -1692,7 +1697,7 @@ msgstr ""
 #: qml/SettingsPage.qml:29
 msgctxt "Title for the settings page"
 msgid "Settings"
-msgstr ""
+msgstr "Einstellungen"
 
 #: qml/SettingsPage.qml:36
 msgctxt "Header for the instruction panel, on the settings page"
@@ -1877,7 +1882,7 @@ msgctxt ""
 "Label for the button which makes the app download the newest available "
 "firmware (only visible when updated firmware has been found)"
 msgid "Download"
-msgstr ""
+msgstr "Herunterladen"
 
 #: qml/SettingsPage.qml:203
 msgctxt ""
@@ -1900,6 +1905,22 @@ msgid ""
 "app and reboot. This is quite normal! It should automatically reconnect, but "
 "in case it doesn't, just click the Connect button on the front page as usual."
 msgstr ""
+"Bevor du deine Geräte von Version %1 auf %2 aktualisierst, stelle bitte"
+" sicher dass du:\n"
+"\n"
+"- dein Gerät über ein USB Ladegerät während der ganzen Aktualisierung"
+" auflädst.\n"
+"\n"
+"- dein Telefon mehr als 50% aufgeladen ist, bevor du loslegst.\n"
+"\n"
+"Die Aktualisierung dauert etwa 3 Minuten. Schalte keines der Geräte aus, "
+"währen die Aktualisierung läuft!\n"
+"\n"
+"Wenn die Aktualisierung abgeschlossen ist, werden deine Geräte neu gestartet. "
+"Dabei wird die Verbindung zu deinem Telefon kurzzeitig getrennt und"
+" automatisch "
+"wiederhergestellt. Sollte dies nicht klappen, tippe bitte auf den"
+" \"Verbinden\" Knopf auf der Startseite."
 
 #: qml/SettingsPage.qml:209
 msgctxt ""
@@ -1991,7 +2012,7 @@ msgstr ""
 msgctxt ""
 "Description for the category for the Relaxed Moveset, on the Moves page"
 msgid "Calm and Relaxed"
-msgstr ""
+msgstr "Ruhig und Entspannt"
 
 #: qml/TailMoves.qml:47
 msgctxt ""
@@ -2022,7 +2043,7 @@ msgstr "AM"
 #: qml/TimePicker.qml:95
 msgctxt "Label for the PM option on a AM/PM selector of a time picker"
 msgid "PM"
-msgstr ""
+msgstr "PM"
 
 #: qml/TimePicker.qml:107
 msgctxt ""
@@ -2038,17 +2059,17 @@ msgstr "Abbrechen"
 #: qml/TimePicker.qml:129
 msgctxt "Button for confirming the time entry, on a time picker"
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: qml/WelcomePage.qml:28
 msgctxt "Header for the welcome page"
 msgid "Crumpet"
-msgstr ""
+msgstr "Crumpet"
 
 #: qml/WelcomePage.qml:31
 msgctxt "Label for the button for disconnecting gear, on the welcome page"
 msgid "Disconnect"
-msgstr ""
+msgstr "Verbindung trennen"
 
 #: qml/WelcomePage.qml:31
 msgctxt "Label for the button for connecting gear, on the welcome page"
@@ -2076,7 +2097,7 @@ msgstr ""
 msgctxt ""
 "Label for the button for opening the Ear Poses page, on the welcome page"
 msgid "Ear Poses"
-msgstr ""
+msgstr "Position der Ohren"
 
 #: qml/WelcomePage.qml:115
 msgctxt ""
@@ -2099,13 +2120,13 @@ msgstr ""
 msgctxt ""
 "Label for the button for opening the Casual Mode page, on the welcome page"
 msgid "Casual Mode"
-msgstr ""
+msgstr "Gelegenheitsmodus"
 
 #: qml/WelcomePage.qml:218
 msgctxt ""
 "Label for the button for configuring the Casual Mode, on the welcome page"
 msgid "Casual Mode Settings"
-msgstr ""
+msgstr "Einstellungen für den Gelegenheitsmodus"
 
 #: qml/WelcomePage.qml:263
 msgctxt "Heading for the panel for turning on Listening Mode"
